# PARAMI

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  terraform.tfvars
src/parami/: bootstrap.py  class_constraint.py  class_entry.py  class_operations.py  dispatch.py  file_operations.py  file_tree.py  logger.py  main.py  parser.py  rich_visuals.py
src/parami/inventory/objects/files/: data.yml
